--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pillow = "^11.0.0"
 pydantic-settings = "^2.7.0"
 sqlmodel = "^0.0.22"
 psycopg2 = "^2.9.10"
+requests = "^2.32.3"
 
 
 [build-system]
