Clean up configuration fields

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -1,19 +1,5 @@
-
-DATABASE_HOSTNAME=localhost
-DATABASE_PORT=5433
-DATABASE_PASSWORD=postgres
-DATABASE_NAME=microscale_storage
-DATABASE_USERNAME=postgres
-
-ZMQ_HOST=localhost
+ZMQ_HOST=0.0.0.0
 ZMQ_PORT=8821
-
-STORAGE_BACKEND=local
-
-LOCAL_FILESYSTEM_BASE_DIRECTORY=./uploads
-
-S3_SERVICE_URL=localhost
-S3_BUCKET=microscale_files
 
 PHOTO_STORAGE_HOST=localhost
 PHOTO_STORAGE_PORT=8001
