--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.115.5"}
-pyzmq = "^26.2.0"
 pillow = "^11.0.0"
 pydantic-settings = "^2.7.0"
 sqlmodel = "^0.0.22"
 psycopg2 = "^2.9.10"
 requests = "^2.32.3"
+pika = "^1.3.2"
 
 
 [build-system]
