--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -1,5 +1,6 @@
-ZMQ_HOST=0.0.0.0
-ZMQ_PORT=8821
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=8821
+RABBITMQ_QUEUE_NAME=image-processing
 
 PHOTO_STORAGE_HOST=localhost
 PHOTO_STORAGE_PORT=8001
