Add RabbitMQ username and password configuration

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -1,5 +1,7 @@
 RABBITMQ_HOST=localhost
 RABBITMQ_PORT=8821
+RABBITMQ_USERNAME=guest
+RABBITMQ_PASSWORD=guest
 RABBITMQ_QUEUE_NAME=image-processing
 
 PHOTO_STORAGE_HOST=localhost
